# transformers_tutorial

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
modules/: postprocessing.py  schemas.py
notebooks/: transformers_tutorial.ipynb
src/: inference.py
