[tool.poetry]
name = "transformers-tutorial"
version = "0.1.0"
description = ""
authors = ["Brady Lamson <lamsonbrady@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
transformers = "^4.36.2"
datasets = "^2.16.1"
evaluate = "^0.4.1"
optuna = "^3.5.0"
scikit-learn = "^1.3.2"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
