[tool.poetry]
name = "transformers-tutorial"
version = "0.1.0"
description = ""
authors = ["Brady Lamson <lamsonbrady@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SciPy = "^1.11.4"
transformers = "^4.36.2"
datasets = "^2.16.1"
pandas = "^2.1.4"
numpy = "^1.26.3"
evaluate = "^0.4.1"
optuna = "^3.5.0"
scikit-learn = "^1.3.2"
flask = "^3.0.0"
jupyter = "^1.0.0"
torch = "^2.1.2"
seqeval = "^1.2.2"
accelerate = "^0.26.1"
matplotlib = "^3.8.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
